# GenixRL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/: ex_1.csv  ex_2.csv
data/outputs/: all_tool_training_medians_1758104492.csv  final_weights_lr_1758104492.pkl  optimal_threshold_1758104492.pkl  preds_test_1758104492.pkl  scaler_1758104492.pkl  sub_model_BayesDel_addAF_1758104492.pkl  sub_model_BayesDel_noAF_1758104492.pkl  sub_model_ClinPred_1758104492.pkl  sub_model_MetaRNN_1758104492.pkl  test_indices_1758104492.pkl
genixrl/config/: config.py
genixrl/data/: preprocessing.py
genixrl/evaluation/: metrics.py
genixrl/models/: rl_fusion.py  submodels.py
genixrl/utils/: helpers.py
genixrl/visualization/: plots.py
scripts/: create_custom_db.py  domain_specific.py  evaluate_model.py  predict.py  train.py
tests/: test_metrics.py
