[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genixrl"
version = "0.1.0"
description = "Logistic Regression with RL Fusion for variant classification"
readme = "README.md"
authors = [{name = "Hassan Abbas", email = "shabbas12@outlook.com"}]
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "pysam>=0.19.0",
    "myvariant>=0.3.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "shap>=0.41.0"
]

[project.scripts]
genixrl-predict = "genixrl.scripts.predict:main"

[project.urls]
Homepage = "https://github.com/shabbas313/GenixRL"
Repository = "https://github.com/shabbas313/GenixRL"